# CHANGELOG
# ---
# * Change deny to assert_false, and deny_success to assert_failure.  Remove Gateway.gateway, as it is available from Base [cody]
#
# * Improve documentation, and test coverage [James Herdman]
#
# * Refactor MonerisGateway, improve test coverage and documentation [James Herdman]
#
# * Add support for crediting to Moneris [James Herdman]
#
# * Send state N/A in Payflow when the state is blank.  Fixes UK PayPal Express payments when not providing a state [cody]
#
# * Load remote test credentials from a fixtures file.  ActiveMerchant will look for a custom file ~/.active_merchant/fixtures.yml.  If the file exists it will be loaded instead of the default fixtures provided by ActiveMerchant.  This makes development easier, and removes the risk of committing non-public test account credentials to subversion. [cody]
#
# * Add support for password protected pem files [cody]
#
# * Add support for Concord Efsnet payment gateway [snacktime]
#
# * Fix dependency loading for gateways that are subclasses [cody]
#
# * Add Braintree payment gateway [Michael J. Mangino]
#
# * Add support for PayPal API signatures [Benjamin Curtis, cody]
#
# * Add payment gateway Viaklix [Sal Scotto, cody]
#
# * Add Australian payment gateway NetRegistry [George Ogata]
#
# * Take order email from the options hash instead of the address for CyberSource [cody]
#
# * Use an array for LineItems when calculating tax in CyberSource gateway [cody]
#
# * Add CyberSource gateway [Matt Margolis]
#
# * Sanitize Protx order id [cody]
#
# * Fix support for electron in Protx [cody]
#
# * Add support for Protx [shiftx, cody]
#
# * Use undef_method with a single argument in SecurePay to prevent JRuby from choking on it. [jonathan.l.bartlett]
#
# * Default address_override to 0 for PayPal Website Payments Standard payments. [cody]
#
# * Enhance credit card error messages [manfred]
#
# * Use HashWithIndifferentAccess for CreditCard for compatibility with Rails applications [michael.j.mangino]
#